# binex

./: .gitignore  Cargo.toml  README.md
.github/workflows/: daily.yml  release.yml  rust.yml
src/: decoder.rs  lib.rs
tests/: decoder.rs
